# obsidian-uds-rest

./: README.md  cli.js  manifest.json  package.json
python/: .gitignore  README.md  main.py  pyproject.toml
src/: constants.ts  main.ts  requestHandler.ts  types.ts
