[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-remote"
version = "0.1.0"
description = "CLI for Obsidian via Unix domain sockets"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "readwithai"}
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "requests-unixsocket>=0.3.0",
]

[project.scripts]
obsidian-remote = "main:cli"

[project.urls]
Homepage = "https://github.com/talwrii/obsidian-uds-rest"
